<resources>
    <string name="app_name">BudgetClient</string>
    <string name="transaktion">Transaktion</string>
    <string name="button">Button2</string>
    <string name="name1">Name</string>
    <string name="button3">Button</string>
    <string name="textview">Transaktion</string>
    <string name="nameTransaktion" />
    <string name="textBetrag">Betrag</string>
    <string name="name">Name</string>
    <string name="kategorie">Kategorie</string>
    <string name="kontotext">Konto</string>
    <string name="speichern">Speichern</string>
    <string-array name="konten">
        <item>Item One</item>
        <item>Item Two</item>
        <item>Item Three</item>
    </string-array>

</resources>
