<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/TextTransaktion"
        android:layout_width="185dp"
        android:layout_height="55dp"
        android:layout_marginStart="185dp"
        android:layout_marginLeft="185dp"
        android:layout_marginTop="3dp"
        android:ems="10"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        android:text="@string/nameTransaktion"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editText8"
        android:layout_width="185dp"
        android:layout_height="55dp"
        android:layout_marginStart="185dp"
        android:layout_marginLeft="185dp"
        android:layout_marginTop="52dp"
        android:ems="10"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        android:text="@string/name"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Spinner
        android:id="@+id/spinner2"
        android:layout_width="185dp"
        android:layout_height="55dp"
        android:layout_marginStart="185dp"
        android:layout_marginLeft="185dp"
        android:layout_marginTop="110dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/Transaktion"
        android:layout_width="185dp"
        android:layout_height="55dp"
        android:gravity="center"
        android:text="@string/textview"
        android:textSize="30sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textCategorie"
        android:layout_width="185dp"
        android:layout_height="55dp"
        android:layout_marginTop="110dp"
        android:gravity="center"
        android:text="@string/kategorie"
        android:textSize="30sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textBetrag"
        android:layout_width="185dp"
        android:layout_height="55dp"
        android:layout_marginTop="52dp"
        android:gravity="center"
        android:text="@string/textBetrag"
        android:textSize="30sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>